frontend: fix dark mode eyesore

--- a/frontend/game.css
+++ b/frontend/game.css
@@ -338,9 +338,8 @@
   text-align: right;
   font-size: 0.8em;
 }
-#coffee a {
-  color: #CCC;
-}
+#coffee a { color: #CCC; }
+.dark-mode #coffee a { color: #555; }
 .color-blind #coffee a {
   color: #000;
   font-weight: bold;
